<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp"
    tools:context=".WelcomePageApp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_welcome_title"
        android:id="@+id/tv_welcome_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_continue"
        android:id="@+id/btn_welcome_continue"
        android:layout_below="@+id/tv_welcome_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onBtnClickContinue" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_start"
        android:id="@+id/btn_welcome_start"
        android:layout_below="@+id/btn_welcome_continue"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnClickStart" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_score"
        android:id="@+id/btn_welcome_score"
        android:layout_below="@+id/btn_welcome_start"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnClickScore" />
</RelativeLayout>
