<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePageActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/altes_rathaus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_title"
        android:id="@+id/tv_welcome_title"
        style="@style/WeltkulturerbeBambergAppTheme.WelcomePage.TextView"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_continue"
        android:id="@+id/btn_welcome_continue"
        android:onClick="onBtnClickedContinue"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/WeltkulturerbeBambergAppTheme.WelcomePage.Button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_restart_tour"
        android:id="@+id/btn_welcome_start"
        android:onClick="onBtnClickedRestartTour"
        android:layout_below="@+id/btn_welcome_continue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/WeltkulturerbeBambergAppTheme.WelcomePage.Button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_about"
        android:id="@+id/btn_welcome_about"
        android:onClick="onBtnClickedAbout"
        android:layout_below="@+id/btn_welcome_start"
        android:layout_alignParentStart="true"
        style="@style/WeltkulturerbeBambergAppTheme.WelcomePage.Button"/>

</RelativeLayout>
