<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp"
    tools:context=".WelcomePageApp"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_welcome_title"
        android:id="@+id/tv_welcome_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="127dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_start"
        android:id="@+id/btn_welcome_start"
        android:onClick="onBtnClickedStart"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_welcome_about"
        android:id="@+id/btn_welcome_about"
        android:onClick="onBtnClickedAbout"
        android:layout_below="@+id/btn_welcome_start"
        android:layout_alignParentStart="true" />

</RelativeLayout>
