<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp"
    tools:context="com.github.weltkulturschnitzelbamberg.weltkulturerbebambergapp.activity.InformationActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_info_image"
        android:layout_gravity="center_horizontal"
        android:background="#fffafafa"
        android:minHeight="250dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_info_information"
        android:text="@string/tv_info_information"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_info_selfie_spot"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_info_selfie_spot"
        android:layout_above="@+id/btn_info_continue"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_info_continue"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_info_continue"
        android:layout_above="@+id/btn_info_score"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_info_score"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_info_score"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>